* Bug fixed: list ctrl head setting * Bug fixed: popup calculate position error. * Bug fixed: tui.windowSize() return width and height include scrollbar * size. * Bug fixed: menu item line wrap.

--- a/tui/css/tui-menu.less
+++ b/tui/css/tui-menu.less
@@ -25,6 +25,8 @@
 					.fa-check;
 				}
 			}
+			white-space:nowrap;
+			overflow:hidden;
 		}
 		&.tui-menu-has-children {
 			> div {
